2007-11-15  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/common/tiff-save.c (save_image): fixed bug in colormap
	handling (bug #497103).

2007-11-13  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/core/gimpimage-merge.c (gimp_image_merge_layers): when we
	encounter an unsupported merge operation (merging an opaque
	indexed layer onto an indexed layer with alpha channel), then add
	an alpha channel and try again. Fixes bug #496437.

2007-11-13  Sven Neumann  <sven@gimp.org>

	Fix for bug #494049 (painting doesn't update the histogram),
	merged from trunk:

	* app/paint/gimppaintcore.c: freeze the drawable preview while we
	are painting. Update the drawable instead of the image.

	* app/widgets/gimphistogrameditor.c: use a short timeout instead
	of an idle handler to update the histogram.

2007-11-12  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/core/gimpimage-merge.c (gimp_image_merge_layers): corrected
	the size of the pixel region passed to color_region() in case of
	an indexed image. Fixes bug #495990.

2007-11-12  Michael Natterer  <mitch@gimp.org>

	Merged from trunk:

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_ruler_button_press): don't let
	GimpImageMapTools move sample points. They fail badly and leave
	the display in a paused state.

2007-11-12  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/common/tiff-load.c (run): properly handle a failure of
	TIFFFdOpen() instead of crashing on TIFF files we can't handle.

2007-11-12  Michael Natterer  <mitch@gimp.org>

	Merged from trunk:

	* app/display/gimpdisplayshell.c (gimp_display_shell_new): don't
	crash if gimp_display_shell_filter_new() returns NULL.
	Fixes bug #495863.

2007-11-11  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/script-fu-compat.init: Return a list
	from cons-array when type is 'string.

2007-11-10  Sven Neumann  <sven@gimp.org>
